        - Fix DatabaseInfo string ( Boris Zentner ) 
        - Add netmask and last_netmask methods ( Boris Zentner )
        - Remove static keyword from objects that are reinitialized in the init() method. ( Tony Jacobs )
        - Replace nearly all calls to file.read() with file.readFully() ( Tony Jacobs )
        - Synchronized 100% of the calls to file ( Tony Jacobs )
        - Use Integer.valueOf() instead of new Integer() to reduce memory consumption. ( Tony Jacobs )
        - Use explicit imports instead of import java.io.*; and the like. ( Tony Jacobs )
        - Fix array length in distributed service setup ( quarz12h )
        - Sync with recent FIPS codes 20090723 ( Boris Zentner )
1.2.3  May 11th 2009 
        - Sync with recent FIPS codes 20090511 ( Boris Zentner )
        - Fixed spelling of Kazakhstan, was Kazakstan ( Boris Zentner )	
        - Fix rare out of range error, when the last entry of the Org/ISP/Domain database is copied ( MEMORY_CACHE only ). ( Boris Zentner )
	- Update timezones for Australia
	- Remore "\n" from RegionLookupTest.java. println add already a newline ( Boris Zentner )
	- Change regionName.java and generate_regionName.pl to support FIPS codes with letters ( Boris Zentner ). 
	- Sync with recent FIPS codes Jan 14th, 2009 ( Boris Zentner )
	- remove dma_code from city records. use  metro_code instead. ( Boris Zentner )
1.2.2  March 22nd 2008
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	- Updated timeZone.java ( Boris Zentner )
	- Add missing \n to admin/generate_timeZone.pl ( Boris Zentner )
	- Fix refresh databaseInfo in combination with GEOIP_CHECK_CACHE ( Boris Zentner, Glenn Pedersen )
	- Changed license from GPL to LGPL, to allow commercial programs to include GeoIP API

1.2.1  June 19th 2007
	- Made GeoIP ASNum database work with Java API
	- Added timeZone and regionName classes to lookup timezone and region name
		from country code and region code (Frank Mather)

1.2.0  January 10th 2007