@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.RandomAccessFile;
 import java.net.InetAddress;
+import java.net.Inet6Address;
 import java.net.UnknownHostException;
 import java.util.HashMap;
 import java.util.Hashtable;
@@ -301,14 +302,14 @@ public class LookupService {
 
 	if (file == null) {
 
-              if(countryCode.length!=countryName.length)
-                throw new AssertionError("countryCode.length!=countryName.length");
+                if(countryCode.length!=countryName.length)
+                    throw new AssertionError("countryCode.length!=countryName.length");
               
-	      // distributed service only
-	      for (i = 0; i < countryCode.length ;i++){
-	  	  hashmapcountryCodetoindex.put(countryCode[i],Integer.valueOf(i));
-		  hashmapcountryNametoindex.put(countryName[i],Integer.valueOf(i));
-	      }
+	        // distributed service only
+	        for (i = 0; i < countryCode.length ;i++){
+	  	    hashmapcountryCodetoindex.put(countryCode[i],Integer.valueOf(i));
+		    hashmapcountryNametoindex.put(countryName[i],Integer.valueOf(i));
+	        }
 	    return;
 	}
 	if ((dboptions & GEOIP_CHECK_CACHE) != 0) {
@@ -359,8 +360,9 @@ public class LookupService {
                 file.seek(file.getFilePointer() - 4);
             }
         }
-        if ((databaseType == DatabaseInfo.COUNTRY_EDITION) |
-	    (databaseType == DatabaseInfo.PROXY_EDITION) |
+        if ((databaseType == DatabaseInfo.COUNTRY_EDITION) ||
+            (databaseType == DatabaseInfo.COUNTRY_EDITION_V6) ||
+	    (databaseType == DatabaseInfo.PROXY_EDITION) ||
 	    (databaseType == DatabaseInfo.NETSPEED_EDITION)) {
             databaseSegments = new int[1];
             databaseSegments[0] = COUNTRY_BEGIN;
@@ -402,6 +404,23 @@ public class LookupService {
     /**
      * Returns the country the IP address is in.
      *
+     * @param ipAddress String version of an IPv6 address, i.e. "::127.0.0.1"
+     * @return the country the IP address is from.
+     */
+    public Country getCountryV6(String ipAddress) {
+	InetAddress addr;
+	try {
+	    addr = Inet6Address.getByName(ipAddress);
+	}
+	catch (UnknownHostException e) {
+            return UNKNOWN_COUNTRY;
+	}
+	return getCountryV6(addr);
+    }
+
+    /**
+     * Returns the country the IP address is in.
+     *
      * @param ipAddress String version of an IP address, i.e. "127.0.0.1"
      * @return the country the IP address is from.
      */
@@ -427,6 +446,25 @@ public class LookupService {
     }
 
     /**
+     * Returns the country the IP address is in.
+     *
+     * @param addr the IP address as Inet6Address.
+     * @return the country the IP address is from.
+     */
+    public Country getCountryV6(InetAddress addr) {
+        if (file == null && (dboptions & GEOIP_MEMORY_CACHE) == 0) {
+            throw new IllegalStateException("Database has been closed.");
+        }
+        int ret = seekCountryV6(addr) - COUNTRY_BEGIN;
+        if (ret == 0) {
+            return UNKNOWN_COUNTRY;
+        }
+        else {
+            return new Country(countryCode[ret], countryName[ret]);
+        }
+    }
+
+     /**
      * Returns the country the IP address is in.
      *
      * @param ipAddress the IP address in long format.
@@ -848,6 +886,73 @@ public class LookupService {
         }
     }
 
+    /**
+     * Finds the country index value given an IPv6 address.
+     *
+     * @param addr the ip address to find in long format.
+     * @return the country index.
+     */
+    private synchronized int seekCountryV6(InetAddress addr) {
+        byte [] v6vec = addr.getAddress();
+	byte [] buf = new byte[2 * MAX_RECORD_LENGTH];
+	int [] x = new int[2];
+        int offset = 0;
+        _check_mtime();
+        for (int depth = 127; depth >= 0; depth--) {
+            if ((dboptions & GEOIP_MEMORY_CACHE) == 1) {
+		//read from memory
+                for (int i = 0;i < 2 * MAX_RECORD_LENGTH;i++) {
+		    buf[i] = dbbuffer[(2 * recordLength * offset)+i];
+		}
+            } else if ((dboptions & GEOIP_INDEX_CACHE) != 0) {
+                //read from index cache
+                for (int i = 0;i < 2 * MAX_RECORD_LENGTH;i++) {
+		    buf[i] = index_cache[(2 * recordLength * offset)+i];
+		}            
+            } else {
+		//read from disk 
+		try {
+                    file.seek(2 * recordLength * offset);
+                    file.readFully(buf);
+                }
+                catch (IOException e) {
+                    System.out.println("IO Exception");
+                }
+            }
+            for (int i = 0; i<2; i++) {
+                x[i] = 0;
+                for (int j = 0; j<recordLength; j++) {
+                    int y = buf[i*recordLength+j];
+                    if (y < 0) {
+                        y+= 256;
+                    }
+                    x[i] += (y << (j * 8));
+                }
+            }
+
+            int bnum = 127 - depth;
+            int idx = bnum >> 3;
+            int b_mask = 1 << ( bnum & 7 ^ 7 );
+            if ((v6vec[idx] & b_mask) > 0) {
+                if (x[1] >= databaseSegments[0]) {
+                    last_netmask = 128 - depth;
+                    return x[1];
+                }
+                offset = x[1];
+            }
+            else {
+                if (x[0] >= databaseSegments[0]) {
+                    last_netmask = 128 - depth;
+                    return x[0];
+                }
+                offset = x[0];
+	    }
+	}
+
+        // shouldn't reach here
+        System.err.println("Error seeking country while seeking " + addr.getHostAddress() );
+        return 0;
+    }
     /**
      * Finds the country index value given an IP address.
      *
